--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-intersection-observer": "^8.32.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "swiper": "^7.0.5",
     "viewport-observer": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
