--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@testing-library/user-event": "^12.8.3",
     "framer-motion": "^4.1.17",
     "intersection-observer": "^0.12.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-external-link": "^2.0.0",
     "react-intersection-observer": "^8.32.1",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "swiper": "^7.0.5",
     "viewport-observer": "^2.3.0",
     "web-vitals": "^1.1.2"
